samples/_failures_safe/1761461575_7e8330_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06d6f45f.c: In function ‘read_compressed_file’:
./samples/SAFE/__tmp_06d6f45f.c:143:9: error: expected declaration or statement at end of input
  143 |         free(compressed_data);
      |         ^~~~
./samples/SAFE/__tmp_06d6f45f.c:143:9: error: expected declaration or statement at end of input
